<resources>
    <string name="app_name">Russian Vocabulary</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="begin_or_continue">Begin or continue</string>
    <string name="image">image</string>
    <string name="verbs">Verbs</string>
    <string name="nouns">Nouns</string>
    <string name="adverbs">Adverbs</string>
    <string name="pronouns">Pronouns</string>
    <string name="adjectives">Adjectives</string>
    <string name="numerals">Numerals</string>
    <string name="conjunctions">Conjunctions</string>

</resources>